--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "node-vault-client",
+  "name": "@getdelta/node-vault-client",
   "version": "0.5.6",
   "description": "A Vault Client implemented in pure javascript for HashiCorp Vault. It supports variety of Auth Backends and performs lease renewal for issued auth token.",
-  "repository": "github:namecheap/node-vault-client",
   "engines": {
     "node": ">=6.0.0"
   },
