--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   "author": "Vlad Fedosov <vlad.fedosov@gmail.com>",
   "license": "Apache-2.0",
   "dependencies": {
-    "@aws-sdk/hash-node": "3.6.1",
-    "@aws-sdk/signature-v4": "3.6.1",
+    "@aws-sdk/hash-node": "^3.6.1",
+    "@aws-sdk/signature-v4": "^3.6.1",
     "assign-deep": "^1.0.1",
     "bluebird": "^3.7.0",
     "lodash": "^4.17.15",
@@ -28,7 +28,7 @@
     "url-join": "^2.0.5"
   },
   "peerDependencies": {
-    "@aws-sdk/credential-provider-node": "3.8.0",
+    "@aws-sdk/credential-provider-node": ">=3.8.0",
     "config": "1.x"
   },
   "devDependencies": {
